[Add]プロフィール機能（登録・編集）並びに退会機能の追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,40 +9,71 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
-  <!--<body class="d-flex flex-column vh-100">-->
-  <!--  <header class="shadow-sm">-->
-  <!--    <nav class="navbar navbar-expand-lg navbar-light">-->
-  <!--      <div class="container">-->
-          <!--<a class="navbar-brand p-3" href="/"><%#= image_tag('logo.png') %></a>-->
-    <!--      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">-->
-    <!--        <span class="navbar-toggler-icon"></span>-->
-    <!--      </button>-->
-    <!--      <div class="collapse navbar-collapse" id="navbarNavDropdown">-->
-    <!--        <ul class="navbar-nav ml-auto">-->
-    <!--        <%# if user_signed_in? %>-->
-    <!--        <li class="nav-item">-->
-    <!--          <%#= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>-->
-    <!--        </li>-->
-    <!--        <li class="nav-item">-->
-    <!--          <%#= link_to '投稿フォーム', new_post_image_path, class: 'nav-link text-dark' %>-->
-    <!--        </li>-->
-    <!--        <li class="nav-item">-->
-    <!--          <%#= link_to 'マイページ', user_path(current_user.id), class: 'nav-link text-dark' %>-->
-    <!--        </li>-->
-    <!--        <%# else %>-->
-    <!--        <li class="nav-item">-->
-    <!--          <%#= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark' %>-->
-    <!--        </li>-->
-    <!--        <li class="nav-item">-->
-    <!--          <%#= link_to "ログイン", new_user_session_path, class: 'nav-link text-dark' %>-->
-    <!--        </li>-->
-    <!--        <%# end %>-->
-    <!--        </ul>-->
-    <!--      </div>-->
-    <!--    </div>-->
-    <!--  </nav>-->
-    <!--</header>-->
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+           <span><%= link_to image_tag('Handmader.PNG'), '/', class: 'navbar-brand' %></span>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to 'マイページ', public_user_path(current_user.id), class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <!--まだ作成してないため実際は遷移できない-->
+              <%#= link_to '投稿フォーム', new_post_item_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <!--まだ作成してないため実際は遷移できない-->
+              <%#= link_to 'お気に入り一覧', user_favorites_path(current_user.id), class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <!--まだ作成してないため実際は遷移できない-->
+              <%#= link_to '作品一覧', user_post_items_path, class: 'nav-link text-dark' %>
+            </li>
+            <% elsif admin_signed_in? %>
+           <li>管理者</li>
+           <li class="nav-item">
+             <!--adminのtopページに会員一覧を載せてます。-->
+            <%= link_to "会員一覧(TOPページ)", admin_path, class:'nav-link text-dark' %>
+           </li>
+           <li class="nav-item">
+            <%= link_to "ジャンル新規作成", new_admin_genre_path, class:'nav-link text-dark' %>
+           </li>
+           <li class="nav-item">
+            <%= link_to "ジャンル管理一覧", admin_genres_path, class:'nav-link' %>
+           </li>
+           <li class="nav-item">
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+           </li>
+           <% else %>
+           <li>ゲストユーザー</li>
+           <!--<li class="nav-item">-->
+           <!-- <%#= link_to "About", about_path, class:'nav-link' %>-->
+           <!--※重要：ログイン前About=のlink_to作成は一旦保留。（まだAboutコントローラー（今回Aboutにモデルとアソシエーションは不要）ルーティング（これは単独でroute.rbへ記載））の作成をしてないため一旦はadmin/homesとつなげとく-->
+           <!--</li>-->
+           <!--<li class="nav-item">-->
+           <!-- <%#= link_to "商品一覧", user_post_items_path, class:'nav-link' %>-->
+           <!--</li>-->
+           <li class="nav-item">
+            <%= link_to "新規登録", new_user_registration_path, class:'nav-link' %>
+           </li>
+           <li class="nav-item">
+            <%= link_to "ログイン", new_user_session_path, class:'nav-link' %>
+           </li>
+           <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
