--- a/app/views/admin/genres/new.html.erb
+++ b/app/views/admin/genres/new.html.erb
@@ -6,13 +6,13 @@
   <%= form_with model: @genre, url: admin_genres_path(@genre), local: true do |f| %>
     <div class="row justify-content-md-center">
       <div class="form-group col-md-3">
-        <h4><%= f.label :genre, "ジャンル名" %></h4>
+        <h4><%= f.label :name, "ジャンル名" %></h4>
         <%= f.text_field :name, class:"form-control", placeholder:"(例)アクセサリー" %><br/>
       </div>
      </div>
     <div class="row justify-content-md-center">
       <div class="form-group">
-        <h4><%= f.label :genre, "ジャンルイメージ画像" %></h4><br/>
+        <h4><%= f.label :image, "ジャンルイメージ画像" %></h4><br/>
             <%= f.file_field :image %>
       </div>
     </div>
@@ -22,6 +22,7 @@
       </div>
     </div>
   <% end %>
+  </div>
 
 
 
