--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,5 +1,44 @@
-<h1>管理者TOPページ</h1>
-
-※作業中
-
-<%#= paginate @users %>
+<p id="notice"></p>
+<div class="container px-5 px-sm-0">
+ <h2>会員一覧</h2>
+ <div class="row">
+  <table class="table table-hober table-inverse">
+  <thead>
+   <tr>
+    <th>会員ID</th>
+    <th>氏名</th>
+    <th>ニックネーム</th>
+    <th>メールアドレス</th>
+    <th>会員ステータス</th>
+   </tr>
+  </thead>
+  <tbody>
+   <% @users.each do |user| %>
+   <tr>
+    <td>
+     <%= user.id %>
+    </td>
+    <td><%=link_to admin_user_path(user) do%>
+     <%= user.name %>
+     <% end %>
+    </td>
+    <td>
+     <%= user.nickname %>
+    </td>
+    <td>
+     <%= user.email %>
+    </td>
+    <td>
+     <% if user.is_deleted == true %>
+      <strong class="Withdrawal"> "退会" </strong>
+     <% else %>
+      <strong class="Existence"> "有効" </strong>
+     <% end %>
+    </td>
+   </tr><% end %>
+  </tbody>
+  </div>
+  </table>
+  <%= paginate @users %>
+  <%#= will_paginate @orders, :previous_label => ' &lt 前へ', :next_label => '次へ &gt' %>
+</div>
