--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -28,10 +28,10 @@
    <div class="row justify-content-md-center">
      <div class="form_group form-inline">
       <%= f.label :会員ステータス, class:"col-3 " %><br />
-      <%= f.radio_button :is_deleted, :Member, checked: true %>
-      <%= f.label :is_deleted, "有効", {value: :Member, style: "display: inline-block;"} %>
-      <%= f.radio_button :is_deleted, :Non_member %>
-      <%= f.label :is_deleted, "退会", {value: :Non_member, style: "display: inline-block;"} %>
+      <%= f.radio_button :is_deleted, :false, checked: true %>
+      <%= f.label :is_deleted, "有効",  style: "display: inline-block;" %>
+      <%= f.radio_button :is_deleted, true %>
+      <%= f.label :is_deleted, "退会", style: "display: inline-block;" %>
       </div>
    </div><br />
 
