--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -18,7 +18,7 @@
      <div>
       <% if @user.id == current_user.id %>
       <p><%= link_to "プロフィール編集", edit_public_user_path(@user) %></p><br />
-      <p> <p><%= link_to "退会する", public_users_unsubscribepath(@user) %></p>
+      <p> <p><%= link_to "退会する", public_unsubscribe_path(@user) %></p>
      </div>
   <% end %>
    </div>
