--- a/app/assets/stylesheets/user/users.scss
+++ b/app/assets/stylesheets/user/users.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the user/users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
+.nickname {
+   color: green;
+}
+
+.profile {
+   font-size: 16px;
+}
