--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -5,21 +5,22 @@
    </div>
    <div class="row">
      <div class= col-md-5>
-       <h4><%=@user.nickname %>さん</h4><br />
+       <h4 class="nickname"><%=@user.nickname %>さん</h4><br />
        <div>
        <% if @user.avatar.attached? %>
        <%= image_tag @user.avatar.variant(resize:'250x250').processed %>
        <% else %>
-       <%= image_tag ("no_image.png") %>
+       <%= image_tag ("no_image.png"),size: '250x250'  %>
        <% end %>
        </div><br />
-       <h4><%=@user.profile %></h4>
-     </div>
+       <div>
+       <h4 class="profile"><%=@user.profile %></h4>
      <div>
       <% if @user.id == current_user.id %>
-      <p><%= link_to "プロフィール編集", edit_public_user_path(@user) %></p><br />
-      <p> <p><%= link_to "退会する", public_unsubscribe_path(@user) %></p>
+      <%= link_to "プロフィール編集", edit_public_user_path(@user) %><br />
+      <p><%= link_to "退会する", public_unsubscribe_path(@user) %></p>
      </div>
+    </div>
   <% end %>
    </div>
 
