[Add]紹介ページ(Aboutページ)no

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,10 +1,50 @@
-<h1>Aboutページ</h1>
-  <%= flash[:error] %>
-
-※ここに後ほど、ページの概要と
-
-・「ホームはこちらから」
-・「みんなの投稿作品を見に行こう！」
-・「まずは新規登録をしよう」
-
-という形でリンク（おしゃれなボタン）を作成する。
+<div class="body">
+<div class="container px-5 px-sm-0">
+  <div class= "justify-content-center">
+    <div class="text-center">
+    <br />
+    <strong><span class="shadow">～Handmaderへようこそ～</span></strong>
+    </div><br />
+    <div class="text-center">
+      <h6>皆さん、ハンドメイドは一人でこなす作業だと思われていませんか？？</h6>
+      <h6>私は素人であるため、まずは作業から！と日々無心にハンドメイド作品を作り上げることに明け暮れてました。</h6>
+      <h6>そんな日々の中で、作品へのアイデアが思いつかずつい…『あー　誰かと相談できたらいいのにな...』</h6>
+      <h6>なんて考えることが多々あります。</h6>
+      <p>外出自粛が余技なくされ人と人とのコミュニケーションが取りづらい世の中で<br />
+      サイトを介し他のクリエーターと話題を共有できる場所があればと考えていました。<br /></p>
+    </div>
+    <div class="text-center">
+     <div class="chat">
+       <i class="far fa-comment"></i>
+     </div>
+      <h5>①当サイトでは自作ハンドメイド作品の投稿及び他クリエーターとの交流が<strong>コメント機能</strong>を通じ可能です。</h5>
+     <div class="message">
+       <i class="fas fa-envelope-square"></i>
+     </div>
+      <h5>②<strong>メッセージ機能</strong>を通じて、共同制作など自由なメッセージもお送りしていただけます！</h5>
+      <h5>メッセージをお送りすることでて可能なサイトです！</h5>
+     <div class="idea">
+       <i class="fas fa-lightbulb"></i>
+     </div>
+      <h5>③潜在している他クリエーターの作品とその作品に対する思いを知ることで日々インスピレーションを受け、</h5>
+      <h5>作品の質を高めてくれます！</h5>
+    </div><br />
+   <div class="row justify-content-center">
+     <h5><strong>まだ新規登録がお済みでない方はこちらから👇</strong><%= link_to "新規登録", new_user_registration_path, class: "btn btn-lg btn-info mt-4 col"%></h5>
+   </div>
+   <br />
+   <br />
+   <div class="row offset-1">
+     <div class="col">
+       <%= link_to "ホームページを見に行こう！",  root_path, class: "button " %>
+     </div>
+     <div class="col">
+       <%= link_to  "みんなの作品を見に行こう！", root_path, class: "button" %>
+     </div>
+   </div>
+ </div>
+</div>
+<br />
+<br />
+<br />
+</body>
