[Edit]紹介ページ(Aboutページ)の編集

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -26,7 +26,7 @@
      <div class="idea">
        <i class="fas fa-lightbulb"></i>
      </div>
-      <h5>③潜在している他クリエーターの作品とその作品に対する思いを知ることで日々インスピレーションを受け、</h5>
+      <h5>③潜在している他クリエーターの作品とその作品に対する思いを知ることで日々インスピレーションを受け</h5>
       <h5>作品の質を高めてくれます！</h5>
     </div><br />
    <div class="row justify-content-center">
