[Add]投稿機能（新規登録・編集・削除・表示ページ）及びマイページでの投稿一覧表示機能作成

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -57,3 +57,7 @@ body {
   color       : #ffffff;            /* 文字の色 */
   font-size   : 30pt;               /* 文字のサイズ */
 }
+
+.login{
+  color       : blue;            /* 文字の色 */
+}
