--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -30,7 +30,10 @@
       <h5>作品の質を高めてくれます！</h5>
     </div><br />
    <div class="row justify-content-center">
-     <h5><strong>まだ新規登録がお済みでない方はこちらから👇</strong><%= link_to "新規登録", new_user_registration_path, class: "btn btn-lg btn-info mt-4 col"%></h5>
+     <h5><strong>まだ新規登録がお済みでない方はこちらから👇</strong><%= link_to "新規登録", new_user_registration_path, class: "btn btn-lg btn-info mt-4 col"%></h5><br />
+   </div>
+   <div class="row justify-content-center">
+    <h5><strong>既にご登録済みの方はこちらから→</strong><%= link_to "【ログイン】", new_user_session_path, class: "login mt-4 col"%></h5>
    </div>
    <br />
    <br />
