[Add]投稿一覧ページ作成及び投稿機能編集

--- a/app/assets/stylesheets/admin/genres.scss
+++ b/app/assets/stylesheets/admin/genres.scss
@@ -4,3 +4,9 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+.title{
+  margin: 1em;
+  padding: 1em;
+  border: 5px dotted #aaffcc;
+}
