--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -37,9 +37,7 @@
       <div class="col">
         <% @post_items.each do |post_item| %>
           <%= link_to  public_post_item_path(post_item.id) do %>
-            <% post_item.images.each do |image| %>
-              <%= image_tag(image, width:200, height:200 ) %>
-            <% end %>
+           <%= image_tag post_item.images[0] ,width:250, height:250 %>
           <!--この中に、いいね件数・コメント件数の表示をするようにもしたい-->
           <% end %>
             <p>
