--- a/app/views/public/post_items/_post_item.html.erb
+++ b/app/views/public/post_items/_post_item.html.erb
@@ -1,28 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<table class="table table-bordered genre-table">
-    <thead>
-      <tr>
-        <th>ジャンル検索</th>
-      </tr>
-    </thead>
-    <tbody>
-    <% @genres.each do |genre| %>
-      <tr>
-        <td>
-          <%= link_to genre.name, public_post_items_path(genre_id: genre.id) %>
-        </td>
-      </tr>
-    <% end %>
-    </tbody>
-</table>
-
- <div class="container px-5 px-sm-0">
-   <div class="row justify-content-md-center">
-     <h3 class="title text-center">みんなの投稿一覧画面</h3>
-   </div>
-   <div class="row">
-     <% @post_items.each do |post_item| %>
     <div class="row card offset-1">
      <div class="card-body">
        <h5 class="card-title"><%=post_item.name %></h5>
@@ -41,6 +16,8 @@
        </div>
       </div>
      </div>
-     <% end %>
-   </div>
- </div>
+
+
+<%= @genres.each do |genre| %>
+<%=link to genre.name, public_genres_path(genre_id: genre.id) %>
+<% end %>
