[Add]お気に入り機能（非同期処理）の実装

--- a/app/views/public/post_items/show.html.erb
+++ b/app/views/public/post_items/show.html.erb
@@ -9,6 +9,9 @@
           <%= image_tag(image, width:250) %>
         <% end %>
       </div>
+      <div id="favorite_area_<%= @post_item %>", class="favoriteArea">
+        <%= render partial: "public/favorites/favorite", locals: { post_item: @post_item } %>
+      </div>
     </div><br />
     <div class="row text-center">
       <div class="col ">
