[ADD]お気に入り一覧ページ作成

--- a/app/assets/stylesheets/public/post_items.scss
+++ b/app/assets/stylesheets/public/post_items.scss
@@ -6,8 +6,8 @@
 @import 'font-awesome';
 
 .box{
-  margin: 1em;
-  padding: 1em;
+  margin: auto;
+  padding: auto;
   border: 5px double #ccddff;
   border-radius: 10px;
 }
