--- a/app/views/public/post_items/show.html.erb
+++ b/app/views/public/post_items/show.html.erb
@@ -10,12 +10,12 @@
         <% end %>
       </div>
       <!--ユーザーがログインしていてかつ、@userが現在のユーザーでなければ表示（つまりマイページには表示されない）-->
-    <% if user_signed_in? && @post_item.user_id != current_user.id %>
+    <%# if user_signed_in? && @post_item.user_id != current_user.id %>
     <!--お気に入りボタンの実装-->
-      <div id="favorite_area_<%= @post_item.id %>", class="favoriteArea">
+      <div id="favorite_area_<%= @post_item.id %>">
         <%= render partial: "public/favorites/favorite", locals: { post_item: @post_item } %>
       </div>
-    <% end %>
+    <%# end %>
     </div><br />
     <div class="row text-center">
       <div class="col ">
