--- a/app/views/public/favorites/show.html.erb
+++ b/app/views/public/favorites/show.html.erb
@@ -1,4 +1,27 @@
- <p id="notice"><%= notice %></p>
+<h3 class="Title">お気に入り一覧</h3>
  <div class="container px-5 px-sm-0">
+  <div class="row justify-content-md-center">
+     <% @favorite_list_page.each do |post_item| %>
+       <div class="Box mr-5">
+        <div class ="col offset-1">
+          <%= link_to  public_user_path(post_item.user) do %>
+            <% if post_item.user.avatar.attached? %>
+              <%= image_tag post_item.user.avatar.variant(resize:'100x100').processed %>
+            <% else %>
+              <%= image_tag ("no_image.png"), size: '100x100'  %>
+            <% end %>
+           <strong><%=post_item.user.nickname %><h6>check!!</h6></strong>
+          <% end %>
+        </div>
+        <div class="col">
+          <%= link_to  public_post_item_path(post_item) do %>
+            <%= image_tag post_item.images[0] ,width:200, height:200 %><br/>
+            <strong><%=post_item.name %><h6>check!!</h6></strong>
+          <% end %>
+        </div>
+       </div>
+     <% end %>
+   </div>
  </div>
- <% if @favorite.present? %>
+
+
