--- a/app/views/public/favorites/show.html.erb
+++ b/app/views/public/favorites/show.html.erb
@@ -1,4 +1,4 @@
-<h3 class="Title">お気に入り一覧</h3>
+<h3 class="Title">お気に入り一覧</h3><br />
  <div class="container px-5 px-sm-0">
   <div class="row justify-content-md-center">
      <% @favorite_list_page.each do |post_item| %>
