[ADD]コメント機能の実装

--- a/app/views/public/post_items/index.html.erb
+++ b/app/views/public/post_items/index.html.erb
@@ -32,6 +32,7 @@
         <% end %>
        </div>
       </div>
+       <%= "#{post_item.comments.count} コメント" %>
      </div>
      <% end %>
    </div>
