--- a/app/views/public/post_items/show.html.erb
+++ b/app/views/public/post_items/show.html.erb
@@ -62,7 +62,7 @@
       <% end %>
     </div>
     <div>
-      <%= form_with(model:[@post_item, @comment], url: public_post_item_comments_path(@post_item, @comment), method: :post, local: true) do |f| %>
+      <%= form_with(model:[@post_item, @comment], url: public_post_item_comments_path(@post_item, @comment), method: :post local: true) do |f| %>
         <%= f.text_area :content, rows:'7',placeholder: "（例）コメントを記載してください（300文字まで）" %>
         <%= f.submit "送信する" %>
       <% end %>
